--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-os:
-  - linux
-
-dist: xenial
-
 language: python
+dist: xenial
+python:
+  - "3.7"
 
 script:
+  - black ./app.py ./tests
   - python -m pytest -v
